# Tame-the-time

./: .gitignore  CHANGELOG.md  README.md  TameTheTime.desktop  TameTheTime.py  __version__.py  constants.py  default_settings.yaml  installer.iss  main.py  pyproject.toml  requirements.txt  tame_the_time.spec  test_midnight_card.yaml
.github/workflows/: release.yml  test.yml
.windsurf/rules/: project-info.md
config/: config_loader.py
docs/: INSTALLATION.md  RELEASE_PROCESS.md  VersionUpdate.md  WINDOWS_BUILD.md
docs/adr/: README.md  adr_000.md  adr_001_layered_architecture.md  adr_002_tkinter_ui_framework.md  adr_003_sqlite_task_tracking.md  adr_004_yaml_configuration.md  adr_005_dependency_injection_pattern.md  adr_006_service_layer_pattern.md  adr_007_canvas_based_rendering.md  adr_008_matplotlib_statistics.md  adr_009_event_driven_ui.md  adr_010_configuration_management.md  adr_011_unique_activity_ids.md  (+7 more)
examples/: adhd_structure.yaml  college_student.yaml  software_engineer.yaml
locales/: en.json  es.json  fr.json  pl.json
models/: __init__.py  schedule.py  time_manager.py
scripts/: bump_version.sh
services/: __init__.py  notification_service.py  schedule_service.py  task_tracking_service.py
tame_the_time/: __init__.py  __main__.py
test/: test_logical_date.py
ui/: app.py  app_card_handling.py  app_ui_events.py  app_ui_loop.py  card_dialogs.py  compact_view.py  context_menu.py  day_rollover_dialog.py  global_options.py  move_card_dialog.py  schedule_management.py  statistics_dialog.py  task_card.py  timeline.py  zoom_and_scroll.py
utils/: config.py  locale_utils.py  logging.py  notification.py  time_utils.py  translator.py
