[tool.poetry]
name = "tame-the-time"
version = "0.1.0"
description = "Timeboxing UI application with gamification"
authors = ["z0diaq"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/z0diaq/Tame-the-time"
repository = "https://github.com/z0diaq/Tame-the-time"
keywords = ["timeboxing", "productivity", "time-management", "tkinter", "gamification"]
packages = [
    {include = "tame_the_time"},
    {include = "ui"},
    {include = "utils"},
    {include = "models"},
    {include = "services"},
    {include = "config"},
    {include = "TameTheTime.py"},
    {include = "__version__.py"},
    {include = "constants.py"}
]
include = [
    "locales/**/*.json",
    "examples/**/*.yaml",
    "examples/**/*.png",
    "default_settings.yaml",
    "LICENSE",
    "README.md"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Scheduling",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = ">=3.5.0"
PyYAML = ">=6.0"
requests = ">=2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
tame-the-time = "tame_the_time.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/z0diaq/Tame-the-time/issues"
